bk_ida/gccida/g3/preprocess_constraints
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/preprocess_constraints/src/recog.c:2655:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
n_alternatives = recog_data_0.n_alternatives; 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/preprocess_constraints/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/preprocess_constraints/src/recog.c:2656:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/preprocess_constraints/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/preprocess_constraints/src/recog.c:2661:15: error: use of undeclared identifier 'recog_data_0'
v3 = ( char *)recog_data_0.constraints[i]; 
              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/preprocess_constraints/src/recog.c:2858:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
n_alternatives = recog_data_0.n_alternatives; 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/preprocess_constraints/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/preprocess_constraints/src/recog.c:2862:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands <= ( int)i + 1 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/preprocess_constraints/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/preprocess_constraints/src/obj/recog.o] Error 1
